--- a/classes.ipynb
+++ b/classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2a4b7519-dc8e-4dbe-a129-e8003860b5cf",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "8b986d72-d7d9-4982-9e91-fd5f463b55f6",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f9f440c2-1127-4ec4-ad33-9365008f2ef1",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "id": "f525965e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename=\"classified_lcs\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "3995ab7c-f5fe-40a1-b6b9-9bf513d133f5",
    "metadata": {},
    "outputs": [],
@@ -102,7 +112,7 @@
     "        return self._beta[column]\n",
     "    \n",
     "    def __load(self):\n",
-    "        self.datatable=pd.read_csv(\"classified_lcs/grs1915_lc\"+str(self.lcnumber)+\".txt\",sep=\"\t\",skiprows=[0, 1], header=None)\n",
+    "        self.datatable=pd.read_csv(filename+\"/grs1915_lc\"+str(self.lcnumber)+\".txt\",sep=\"\t\",skiprows=[0, 1], header=None)\n",
     "        self.datatable.columns=['time', 'total','low','mid','high'] \n",
     "        \n",
     "        firstline=pd.read_csv(\"classified_lcs/grs1915_lc\"+str(self.lcnumber)+\".txt\",sep=\"\t\",nrows=1, header=None).iloc[0,0]\n",
@@ -139,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "01848ce8-3b18-408d-a2c1-32e03c80c0cf",
    "metadata": {},
    "outputs": [],
@@ -169,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "13f2e9d7-41a4-4c52-963c-1372bf871e7c",
    "metadata": {},
    "outputs": [],
@@ -179,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "00b39fbf-e4d6-4a5c-8eca-aecea758179c",
    "metadata": {},
    "outputs": [],
@@ -259,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "87498c0a-0494-4db4-84ab-a5a7256efeee",
    "metadata": {},
    "outputs": [],
@@ -403,7 +413,7 @@
     "    def __positionsforcut(self,cut):\n",
     "        return sorted(self._minimaspositions[self._minimas<=cut])\n",
     "\n",
-    "    def min(self):\n",
+    "    def min_(self):\n",
     "        self.__findminimas()\n",
     "        return self._minCut\n",
     "\n",
@@ -412,7 +422,7 @@
     "        self.findcut()\n",
     "        return self._efficientCut\n",
     "    \n",
-    "    def max(self):\n",
+    "    def max_(self):\n",
     "        self.__findminimas()\n",
     "        return self._maxCut\n",
     "\n",
@@ -438,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "7f5b4c18-c052-4b77-8e3a-8dae4b346646",
    "metadata": {},
    "outputs": [],
@@ -452,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "120cfaf7-463e-4a74-886e-1e87e368ba59",
    "metadata": {},
    "outputs": [],
@@ -490,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "bb912c9b-5784-4130-823b-781e657be727",
    "metadata": {},
    "outputs": [],
@@ -722,14 +732,6 @@
     "        comparators.append(normalizedComparator(Data(i),column,shaplet))\n",
     "    return comparators\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a6d7343b-08be-4950-874d-cf0200b4c577",
-   "metadata": {},
-   "source": [
-    "#  With what lcs should i compare to find best matches to then take the mean ????"
    ]
   },
   {
@@ -1013,22 +1015,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22511fdb-64e3-406f-b2be-51ec621bfade",
-   "metadata": {},
-   "source": [
-    "# computed covered area of the shaplet on rho (change the function to count for shaplet that dont end fully) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0cabafb9-b8b9-4ab9-8422-7c2ef7c15122",
-   "metadata": {},
-   "source": [
-    "# PROGRAM NOW THE DIFFERENT SHAPLETS ESPECIALLY THE SMALL ONES"
-   ]
   },
   {
    "cell_type": "code",
