--- a/classes.ipynb
+++ b/classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2a4b7519-dc8e-4dbe-a129-e8003860b5cf",
    "metadata": {},
    "outputs": [],
@@ -66,17 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f525965e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename=\"classified_lcs\""
+    "# Forbidden filename=\"classified_lcs\"\n",
+    "path = \"classified_lcs\"\n",
+    "def set_path(newpath):\n",
+    "    global path \n",
+    "    path = newpath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "3995ab7c-f5fe-40a1-b6b9-9bf513d133f5",
    "metadata": {},
    "outputs": [],
@@ -112,10 +116,10 @@
     "        return self._beta[column]\n",
     "    \n",
     "    def __load(self):\n",
-    "        self.datatable=pd.read_csv(filename+\"/grs1915_lc\"+str(self.lcnumber)+\".txt\",sep=\"\t\",skiprows=[0, 1], header=None)\n",
+    "        self.datatable=pd.read_csv(path+\"/grs1915_lc\"+str(self.lcnumber)+\".txt\",sep=\"\t\",skiprows=[0, 1], header=None)\n",
     "        self.datatable.columns=['time', 'total','low','mid','high'] \n",
     "        \n",
-    "        firstline=pd.read_csv(\"classified_lcs/grs1915_lc\"+str(self.lcnumber)+\".txt\",sep=\"\t\",nrows=1, header=None).iloc[0,0]\n",
+    "        firstline=pd.read_csv(path+\"/grs1915_lc\"+str(self.lcnumber)+\".txt\",sep=\"\t\",nrows=1, header=None).iloc[0,0]\n",
     "        prefix=\"# class : \"\n",
     "        self.dataclass=firstline[len(prefix):].strip()\n",
     "\n",
@@ -149,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "01848ce8-3b18-408d-a2c1-32e03c80c0cf",
    "metadata": {},
    "outputs": [],
@@ -167,12 +171,12 @@
     "        self._beta={\"low\":None,\"mid\":None,\"high\":None}\n",
     "        \n",
     "    def __normalizedload(self):\n",
-    "        self.datatable=pd.read_csv(\"classified_lcs/grs1915_lc\"+str(self.lcnumber)+\".txt\",sep=\"\t\",skiprows=[0, 1], header=None)\n",
+    "        self.datatable=pd.read_csv(path+\"/grs1915_lc\"+str(self.lcnumber)+\".txt\",sep=\"\t\",skiprows=[0, 1], header=None)\n",
     "        self.datatable.columns=['time', 'total','low','mid','high'] \n",
     "        for c in self.datatable.columns:\n",
     "            self.datatable[c]=utilities.normalize(self.datatable[c])\n",
     "            \n",
-    "        firstline=pd.read_csv(\"classified_lcs/grs1915_lc\"+str(self.lcnumber)+\".txt\",sep=\"\t\",nrows=1, header=None).iloc[0,0]\n",
+    "        firstline=pd.read_csv(path+\"/grs1915_lc\"+str(self.lcnumber)+\".txt\",sep=\"\t\",nrows=1, header=None).iloc[0,0]\n",
     "        prefix=\"# class : \"\n",
     "        self.dataclass=firstline[len(prefix):].strip()"
    ]
@@ -1175,7 +1179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.12.11"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
