--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -38,7 +38,6 @@
     "import bisect\n",
     "\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "import mplcursors\n",
@@ -54,6 +53,24 @@
     "import pickle\n",
     "import bisect\n",
     "import time\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fe54731-a472-4df5-9c78-8858b714d522",
+   "metadata": {},
+   "source": [
+    "# Please indicate here the path to your data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "972a3e70-28f0-4782-a539-961b6dd4ad00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_path( \"/Users/gangler/data/GRS1915+105/classified_lcs\") #<my_path> "
    ]
   },
   {
@@ -147,7 +164,7 @@
     "alpha={}\n",
     "normalizeddata={}\n",
     "for i in class2key[\"rho\"]:\n",
-    "    alpha[i]=utilities.findalpha(Data(i).getcolumn(\"low\"))\n",
+    "    alpha[i]=utilities.findalpha(data[i].getcolumn(\"low\"))\n",
     "    normalizeddata[i]=normalizedData(i)"
    ]
   },
@@ -174,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lc181=Data(181)"
+    "lc181=data[181]"
    ]
   },
   {
@@ -467,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
