adding the encoding code bloc

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -27,6 +27,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "43159c13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<h3>Free Parameters</h3>\n",
+       "<table style=\"border-collapse: collapse; width: 70%;\">\n",
+       "  <thead>\n",
+       "    <tr style=\"background-color: #f2f2f2;\">\n",
+       "      <th style=\"border: 1px solid #ddd; padding: 8px; text-align: left;\">Parameter Description</th>\n",
+       "      <th style=\"border: 1px solid #ddd; padding: 8px; text-align: left;\">Value (to be filled)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr><td style=\"border: 1px solid #ddd; padding: 8px;\">Order of windowing on χ² to find its minimas in the comparator</td><td style=\"border: 1px solid #ddd; padding: 8px;\">len(shaplet)/2</td></tr>\n",
+       "    <tr><td style=\"border: 1px solid #ddd; padding: 8px;\">χ² cut used to define \"good\" matches in averaging</td><td style=\"border: 1px solid #ddd; padding: 8px;\">2</td></tr>\n",
+       "    <tr><td style=\"border: 1px solid #ddd; padding: 8px;\">Order of windowing on min(χ²) to find its minimas</td><td style=\"border: 1px solid #ddd; padding: 8px;\">len(shaplet)</td></tr>\n",
+       "    <tr><td style=\"border: 1px solid #ddd; padding: 8px;\">Avoidance region length</td><td style=\"border: 1px solid #ddd; padding: 8px;\">len(shaplet)/3</td></tr>\n",
+       "    <tr><td style=\"border: 1px solid #ddd; padding: 8px;\">Length of the shaplet</td><td style=\"border: 1px solid #ddd; padding: 8px;\">300 list size wise</td></tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "html_table = \"\"\"\n",
+    "<h3>Free Parameters</h3>\n",
+    "<table style=\"border-collapse: collapse; width: 70%;\">\n",
+    "  <thead>\n",
+    "    <tr style=\"background-color: #f2f2f2;\">\n",
+    "      <th style=\"border: 1px solid #ddd; padding: 8px; text-align: left;\">Parameter Description</th>\n",
+    "      <th style=\"border: 1px solid #ddd; padding: 8px; text-align: left;\">Value (to be filled)</th>\n",
+    "    </tr>\n",
+    "  </thead>\n",
+    "  <tbody>\n",
+    "    <tr><td style=\"border: 1px solid #ddd; padding: 8px;\">Order of windowing on χ² to find its minimas in the comparator</td><td style=\"border: 1px solid #ddd; padding: 8px;\">len(shaplet)/2</td></tr>\n",
+    "    <tr><td style=\"border: 1px solid #ddd; padding: 8px;\">χ² cut used to define \"good\" matches in averaging</td><td style=\"border: 1px solid #ddd; padding: 8px;\">2</td></tr>\n",
+    "    <tr><td style=\"border: 1px solid #ddd; padding: 8px;\">Order of windowing on min(χ²) to find its minimas</td><td style=\"border: 1px solid #ddd; padding: 8px;\">len(shaplet)</td></tr>\n",
+    "    <tr><td style=\"border: 1px solid #ddd; padding: 8px;\">Avoidance region length</td><td style=\"border: 1px solid #ddd; padding: 8px;\">len(shaplet)/3</td></tr>\n",
+    "    <tr><td style=\"border: 1px solid #ddd; padding: 8px;\">Length of the shaplet</td><td style=\"border: 1px solid #ddd; padding: 8px;\">300 list size wise</td></tr>\n",
+    "  </tbody>\n",
+    "</table>\n",
+    "\"\"\"\n",
+    "\n",
+    "display(HTML(html_table))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "280b8d3b",
    "metadata": {},
@@ -358,6 +418,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cba3aa63",
+   "metadata": {},
+   "source": [
+    "#### Dictionary to track intervals where shaplets were actually taken\n",
+    "#### Algorithm can be optimized by saving only the two sup,inf points defining avoidance regions\n",
+    "#### and going through each interval rather in a simple algorithm to check if the point is in one of those"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c1a86889",
@@ -462,10 +532,220 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b1f57930",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code to launch the search,BUT BEWARE,IT MIGHT TAKE A WHILE,1 MIN PER SHAPLET AND THIS IS ONLY SEARCHING IN RHO CLASS\n",
+    "#L=[shaplet1]\n",
+    "#keys=[]\n",
+    "#comparators = defaultdict(list)\n",
+    "#builddictionarynew3(L,keys,comparators)\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "646753c5",
+   "metadata": {},
+   "source": [
+    "#### reading the dictionary of shaplets (i have already saved some in a file included in the remote repo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0b556f50",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "validdict = utilities.loadpickle(\"valid dictionary\")\n",
+    "valid_keys = {'lcnumber', 'column', 'start', 'length', 'alpha', 'mean', 'isaclean', 'series', 'isnormalized'}\n",
+    "\n",
+    "# Filter each dictionary to keep only the valid keys\n",
+    "filtered_validdict = [{k: v for k, v in d.items() if k in valid_keys} for d in validdict]\n",
+    "\n",
+    "# Reconstruct objects\n",
+    "shapletlist = [Shaplet(**d) for d in filtered_validdict]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "533ee7a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "plt.figure()\n",
+    "for sh in shapletlist:\n",
+    "    title=\"extracted from \"+str(sh.lcnumber)+\",with start time: \"+str(sh.start/8)\n",
+    "    plt.title(title)\n",
+    "    plt.plot(np.arange(len(sh.series))/8,sh.series)\n",
+    "    plt.show()\n",
+    "    plt.figure()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8179bc79",
+   "metadata": {},
+   "source": [
+    "### Now this block is to plot the shaplets found on the lc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8c54857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plotshapletsonlc(lcnumberINDEX,lightcurve, orderedshapletlist, indexes, shapletdictionary, color_dict,min_chi2_index=None, opacity=0.3):\n",
+    "    # Step 1: Create a unique color for each shaplet number\n",
+    "    unique_shaplets = list(set(orderedshapletlist))\n",
+    "    n_shaplets = len(unique_shaplets)\n",
+    "\n",
+    "    # Step 2: Plot the lightcurve\n",
+    "    plt.plot(np.arange(len(lightcurve)) / 8, lightcurve, color='blue', alpha=0.7, label='Lightcurve')\n",
+    "    labeled_shaplets=set()\n",
+    "    # Step 3: Plot each shaplet at the given start index\n",
+    "    for i, shaplet_num in enumerate(orderedshapletlist):\n",
+    "        label = f'Shaplet {shaplet_num}' if shaplet_num not in labeled_shaplets else None\n",
+    "        if label:\n",
+    "            labeled_shaplets.add(shaplet_num)\n",
+    "\n",
+    "        start_idx = indexes[i]\n",
+    "        shaplet = shapletdictionary[shaplet_num]  # Assuming shapletdictionary[shaplet_num] has attribute 'series' and 'length' or just is a 1D array\n",
+    "\n",
+    "        # Current color from dictionary\n",
+    "        current_color = color_dict[shaplet_num]\n",
+    "\n",
+    "        # Current opacity (full opacity if this is the min chi2 index, else reduced)\n",
+    "        current_opacity = 1.0 if (min_chi2_index is not None and i == min_chi2_index) else opacity\n",
+    "\n",
+    "        # Determine end index\n",
+    "        end_idx = start_idx + len(shaplet)\n",
+    "        if end_idx > len(lightcurve):\n",
+    "            # Trim shaplet if it runs past the lightcurve length\n",
+    "            plot_x = np.arange(start_idx, len(lightcurve)) / 8\n",
+    "            plot_y = shaplet.series[:len(lightcurve) - start_idx]\n",
+    "        else:\n",
+    "            plot_x = np.arange(start_idx, end_idx) / 8\n",
+    "            plot_y = shaplet.series\n",
+    "\n",
+    "        # Plot the shaplet on the lightcurve\n",
+    "        plt.plot(plot_x, plot_y, color=current_color, alpha=current_opacity,label=label)\n",
+    "\n",
+    "    plt.legend()\n",
+    "    plt.xlabel('Time')\n",
+    "    plt.ylabel('Signal')\n",
+    "    plt.title('Lightcurve '+str(lcnumberINDEX)+' with Shaplets Overlay')\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1268a5dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comparators={}\n",
+    "minimumchi2={}\n",
+    "minrows={}\n",
+    "minimaspositions={}\n",
+    "encode={}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a0ca3f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in class2key[\"rho\"]:\n",
+    "    #computing now:\n",
+    "    print(\"lc: \",i)\n",
+    "    if i not in comparators:\n",
+    "        comparators[i]       = []\n",
+    "        minimumchi2[i]       = []\n",
+    "        minrows[i]           = []\n",
+    "        encode[i]            = []\n",
+    "        \n",
+    "    for sh in shapletlist:\n",
+    "        comparator = Comparator(normalizeddata[i], \"low\",sh)\n",
+    "        comparators[i].append(comparator)\n",
+    "        \n",
+    "    comparatorlist = comparators[i]\n",
+    "    chi2list = [comparator.chi2() for comparator in comparatorlist]\n",
+    "    chi2matrix = np.array(chi2list)\n",
+    "\n",
+    "    minrows[i] = np.argmin(chi2matrix, axis=0)  \n",
+    "\n",
+    "    minimumchi2[i] = chi2matrix[minrows[i], np.arange(chi2matrix.shape[1])]\n",
+    "\n",
+    "    minimaspositions[i]=sig.argrelmin(minimumchi2[i],order=int(len(sh)),mode=\"wrap\")[0]\n",
+    "    \n",
+    "    encode[i]=minrows[i][minimaspositions[i]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdbec555",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_shaplets=len(shapletlist)\n",
+    "\n",
+    "# Use a colormap to assign colors (tab20 has 20 distinct colors)\n",
+    "cmap = plt.cm.get_cmap('tab20', n_shaplets)\n",
+    "\n",
+    "# Create a color dictionary: shaplet_number -> RGBA color\n",
+    "color_dict = {shaplet_num: cmap(i) for i, shaplet_num in enumerate(range(len(shapletlist)))}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8905f5f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "plt.figure()\n",
+    "for el in maxclassifier:\n",
+    "    print(\"max classifier is: \",el)\n",
+    "    if len(maxclassifier[el])>5:\n",
+    "        randomele= random.sample(maxclassifier[el], 5)\n",
+    "        for i in randomele:\n",
+    "            plotshapletsonlc(i,normalizeddata[i].low(),encode[i],minimaspositions[i],shapletlist,color_dict,opacity=0.7)\n",
+    "            plt.figure()\n",
+    "    else:\n",
+    "         for i in maxclassifier[el]:\n",
+    "            plotshapletsonlc(i,normalizeddata[i].low(),encode[i],minimaspositions[i],shapletlist,color_dict,opacity=0.7)\n",
+    "            plt.figure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9cbeb28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#another method to plot the shaplets on the lc\n",
+    "plt.figure()\n",
+    "plt.plot(minimumchi2[181])\n",
+    "color=[]\n",
+    "for el in minrows[181][minimaspositions[181]]:\n",
+    "    color.append(color_dict[el])\n",
+    "plt.scatter(minimaspositions[181],minimumchi2[181][minimaspositions[181]],color=color)\n",
+    "plt.scatter(np.arange(len(minimumchi2[181])),minimumchi2[181],color=[color_dict[el] for el in minrows[181]],marker='.')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -484,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
